[tool.poetry]
name = "py-binary-tree"
version = "0.1.0"
description = ""
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
maturin = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
